# miniomm

./: .bumpversion.cfg  .gitignore  Makefile  NOTE  README.md  miniomm.py  pyproject.toml  setup.cfg  setup.py
examples/amber-NPT/: input
examples/amber-NVT/: input  input.xsc
examples/amber-NVT-short/: input.short
examples/charmm/: dhfr.prm  input
examples/dhfr-amber-NVT/: input.coor
examples/dhfr-openmm/: dhfr.mini.state.xml  input
examples/openmm/: input
examples/plumed/: acemd_input  diala.plumed  input
examples/plumed-diala/: Makefile  input
examples/plumed-old/: Makefile  fes.gp  input
examples/plumed-old/reference/: colvar  slurm-117374.out
examples/plumed/wrong_units/: diala.plumed
miniomm/: NAMDBin.py  __init__.py  __main__.py  atomrestraint.py  config.py  main.py  miniomm.py  namdbin.py  namdxsc.py  reporters.py  util.py
scratch/amber/: input.coor  structure.prmtop  test.py
scratch/openmm/: a.plumed  b.plumed  n.coor
tests/: import.py
