[metadata]
name = miniomm
version = 0.1.1
author = Toni Giorgino
author_email = toni.giorgino@gmail.com
description = A simple OpenMM wrapper for common-case MD runs
license = LGPL-3.0-or-later
keywords = molecular dynamics
url = https://github.com/giorginolab/miniomm
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Chemistry
        Topic :: Scientific/Engineering :: Bio-Informatics
        Topic :: Scientific/Engineering :: Physics
        License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)


[options]
packages = find:
scripts = bin/sbatch_many

[options.entry_points]
console_scripts =
  miniomm = miniomm.main:main


[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:miniomm/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
